add animation to our fees

--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
           <h2 data-aos="fade">Fiscal Sponsorship Fees</h2>
         </div>
         <div class="amountRaisedAndCrowdFundWrapper">
-          <div class="amountRaisedWrapperWithTitle" data-aos="fade-right">
+          <div class="amountRaisedWrapperWithTitle" >
             <div class="amountRaisedWrapper">
-              <div class="amountRaisedCard fivePercent">
+              <div class="amountRaisedCard fivePercent" data-aos="fade-right">
                 <div class="figureRaisedWrapper">
                   <div class="figure">
                     <span class="number">5</span>
@@ -344,7 +344,7 @@
                   </div>
                 </div>
               </div>
-              <div class="amountRaisedCard fourPercent">
+              <div class="amountRaisedCard fourPercent" data-aos="fade-left">
                 <div class="figureRaisedWrapper">
                   <div class="figure">
                     <span class="number">4-8</span>
