Removed confusing duplicate wording.

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 <p>
                   a. <strong>Increasing access to educational resources and training</strong>: With the advance of technology and the movement towards a society where people work together to enhance and develop the future, there has been an increase in the number of organizations and groups that are coming together to promote education.<br>
 b. <strong>Creating a positive social impact:</strong> Sponsor’s social impact purpose is aimed at finding ways to (i) eliminate prejudice and discrimination; (ii) combat community deterioration; (iii) decrease juvenile delinquency; (iv) serve the less fortunate or distressed; (v) serve to prevent animal or child cruelty; or (vi) create a positive impact on society.<br>
-c. <strong>Developing tools to improve civic participation within cities or communities:</strong> Sponsor sponsors projects aimed at fostering civic participation, democratic debate and rebuilding community ties and strengths.
+c. <strong>Developing tools to improve civic participation within cities or communities:</strong> Sponsor supports projects aimed at fostering civic participation, democratic debate and rebuilding community ties and strengths.
                 </p>
               </div>
             </div>
