Update Create Your Initiative Modal

--- a/index.html
+++ b/index.html
@@ -728,8 +728,8 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
           </div>
           <div class="createYourInitiativeModalWrapper" js-view="createYourInitiativeModal" >
             <div class="createYourInitiativeModalTitleWrapper">
-              <h1>Create your Initiatives</h1>
-              <p>Introduce your Foundation to the community</p>
+              <h1>Create your Initiative</h1>
+              <p>Introduce your Initiative to the community</p>
             </div>
             <div class="initiativeFormWrapper">
               <form js-event="createInitiativeForm">
