update banner links

--- a/index.html
+++ b/index.html
@@ -801,11 +801,11 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
         <div class="supportCommunitiesWrapper">
           <h3>Support communities with mutual aid.</h3>
           <p>
-            <a href="#">Discover groups</a> to donate to, or <a href="#">join with your own</a><br />
+            <a href="https://opencollective.com/discover?show=covid-19">Discover groups</a> to donate to, or <a href="https://opencollective.com/foundation/apply">join with your own</a><br />
             *Groups must be formed after July 1, 2020. Offer of 0 fees applies from now-Dec 31, 2020.
           </p>
           <p>
-            Join Open Collective today with your COVID-relief mutual aid group. <a href="#">Learn more</a> or <a href="#">contact us</a> to start collecting tax-deductible donations asap.
+            Join Open Collective today with your COVID-relief mutual aid group. <a href="http://www.docs.opencollective.foundation">Learn more</a> or <a href="mailto:contact@opencollective.foundation">contact us</a> to start collecting tax-deductible donations asap.
           </p>
         </div>
         <div class="bannerIllustration rightLadyIllustration">
