update the nav links

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                     General Information
                   </a>
                 </li>
+                <li class="menuList-sm">
+                  <a href="https://docs.opencollective.foundation/" target="__blank" js-link="docsAndHelp">
+                    Docs & Help
+                  </a>
+                </li>
               </ul>
             </div>
             <div class="messageWrapper">
@@ -136,6 +141,11 @@
             <a href="#generalInformation" js-link="generalInformation">
               <li class="mobileNavList">
                 General Info
+              </li>
+            </a>
+            <a href="https://docs.opencollective.foundation/" js-link="docsAndHelp" target="__blank">
+              <li class="mobileNavList">
+                Docs & Help
               </li>
             </a>
           </ul>
@@ -781,8 +791,8 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
         </div>
       </div>
     </div>
-    <div class="bannerOverlay" data-aos="fade-in" js-view="bannerOverlay">
-      <div class="bannerBackground" js-view="bannerBackground" data-aos="slide-up" data-aos-delay="1000">
+    <div class="bannerOverlay" js-view="bannerOverlay">
+      <div class="bannerBackground" js-view="bannerBackground">
         <div class="pandemicInfoWrapper">
           <div class="pandemicInfoHeader">
             <div>
