--- a/index.html
+++ b/index.html
@@ -696,7 +696,25 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
             </form>
           </div>
         </div>
+    
         <div class="addressWrapper">
+          <div class="quickLinksWrapper">
+            <h5>Quick links</h5>
+            <ul class="quickLinksListWrapper">
+              <li>
+                <a href="https://blog.opencollective.com/">Blog</a>
+              </li>
+              <li>
+                <a href="https://docs.opencollective.foundation/">Docs & Help</a>
+              </li>
+              <li>
+                <a href="https://opencollective.com/foundation#section-contributions">Our Hosted Initiatives</a>
+              </li>
+              <li>
+                <a href="https://docs.opencollective.com/help/about/introduction">About Open Collective</a>
+              </li>
+            </ul>
+          </div>
           <div class="organizationDetailsWrapper">
             <h5>Our Organizational details</h5>
             <p>
