target to open quick links in new tab

--- a/index.html
+++ b/index.html
@@ -702,16 +702,16 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
             <h5>Quick links</h5>
             <ul class="quickLinksListWrapper">
               <li>
-                <a href="https://blog.opencollective.com/">Blog</a>
+                <a href="https://blog.opencollective.com/" target="__blank">Blog</a>
               </li>
               <li>
-                <a href="https://docs.opencollective.foundation/">Docs & Help</a>
+                <a href="https://docs.opencollective.foundation/" target="__blank">Docs & Help</a>
               </li>
               <li>
-                <a href="https://opencollective.com/foundation#section-contributions">Our Hosted Initiatives</a>
+                <a href="https://opencollective.com/foundation#section-contributions" target="__blank">Our Hosted Initiatives</a>
               </li>
               <li>
-                <a href="https://docs.opencollective.com/help/about/introduction">About Open Collective</a>
+                <a href="https://docs.opencollective.com/help/about/introduction" target="__blank">About Open Collective</a>
               </li>
             </ul>
           </div>
