--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
               </div>
             </div>
             <div class="actionWrapper" data-aos="fade-up" data-aos-delay="400" data-aos-easing="ease-out">
-              <button class="buttonStyleLink applyToStart mobileApply" js-event="applyToStart">
+              <a href="https://opencollective.com/foundation/apply" class="buttonStyleLink applyToStart mobileApply">
                 Apply to Start
-              </button>
-              <button class="buttonStyleLink applyToStart desktopApply" js-event="applyToStart">
+              </a>
+              <a href="https://opencollective.com/foundation/apply" class="buttonStyleLink applyToStart desktopApply">
                 Apply with your initiative
-              </button>
+              </a>
               <a href="#whatWeOffer" class="learnMore">
                 Learn More
               </a>
@@ -253,12 +253,12 @@
             </div>
           </div>
           <div class="actionWrapper">
-            <button class="buttonStyleLink mobile greenButton" js-event="applyToStart">
+            <a href="https://opencollective.com/foundation/apply" class="buttonStyleLink mobile greenButton">
               Apply to Start
-            </button>
-            <button class="buttonStyleLink longerTextLink greenButton" js-event="applyToStart">
+            </a>
+            <a href="https://opencollective.com/foundation/apply" class="buttonStyleLink longerTextLink greenButton">
               Apply with your initiative
-            </button>
+            </a>
              <a class="buttonStyleLink readDocs longerTextLink" href="https://docs.opencollective.foundation/about/fiscal-sponsorship-info-guide" target="__blank">
               Read Info Guide
             </a>
@@ -696,7 +696,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
             </form>
           </div>
         </div>
-    
+
         <div class="addressWrapper">
           <div class="quickLinksWrapper">
             <h5>Quick links</h5>
