feat: add google ad script

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/modal.css" />
     <link rel="stylesheet" href="/css/banner.css" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-416141352"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-416141352');
+    </script>
   </head>
   <body>
     <div class="headerAndSponsorshipWrapper">
