add fiscal-hosting link

--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/modal.css" />
     <link rel="stylesheet" href="/css/banner.css" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-416141352"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-416141352"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'AW-416141352');
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "AW-416141352");
     </script>
   </head>
   <body>
@@ -336,11 +341,15 @@
                 data-aos-delay="100"
                 data-aos-easing="ease-out-quad"
               >
-                Open Collective Foundation offers fiscal
-                sponsorship as a service to help initiatives get up and running
-                fast. There's no need to create a bank account or legal entity!
-                Our platform enables you to easily receive donations and
-                pay expenses.
+                Open Collective Foundation offers fiscal sponsorship as a
+                service to help initiatives get up and running fast. There's no
+                need to create a bank account or legal entity! Our platform
+                enables you to easily receive donations and pay expenses.
+                <a
+                  href="https://opencollective.com/fiscal-hosting"
+                  target="__blank"
+                  >Learn More</a
+                >
               </p>
             </div>
           </div>
@@ -377,9 +386,9 @@
                 data-aos-easing="ease-out"
               >
                 We take care of receiving tax-deductible donations for your
-                initiative through our registered 501(c)(3) nonprofit status. We manage
-                your expenses, file taxes, and take care of accounting. Let us
-                do the admin so you can focus on your mission!
+                initiative through our registered 501(c)(3) nonprofit status. We
+                manage your expenses, file taxes, and take care of accounting.
+                Let us do the admin so you can focus on your mission!
               </p>
             </div>
           </div>
@@ -414,9 +423,8 @@
               >
                 We automate the back-end processes so you can spend less time
                 doing admin. On your dashboard, you can see your current budget,
-                how much you've spent, and everything you
-                need to tell your donors how to fund you. Reporting is automatic
-                and in real time.
+                how much you've spent, and everything you need to tell your
+                donors how to fund you. Reporting is automatic and in real time.
               </p>
             </div>
           </div>
@@ -521,9 +529,9 @@
             <div class="initiativeTextWrapper">
               <h3>Tax deductible donations</h3>
               <p>
-                Allow your supporters to make tax deductible donations via 
-                credit card, bank transfer, or PayPal. Donors can also easily give 
-                via matching gift or donor-advised fund (DAF). We can 
+                Allow your supporters to make tax deductible donations via
+                credit card, bank transfer, or PayPal. Donors can also easily
+                give via matching gift or donor-advised fund (DAF). We can
                 provide the invoices and documentation your funders need.
               </p>
             </div>
@@ -538,10 +546,10 @@
             <div class="initiativeTextWrapper">
               <h3>Engage your community</h3>
               <p>
-                Our platform provides tools for you to build strong 
-                relationships with your supporters. You also join our network 
-                of hosted initiatives and become part of a supportive
-                and growing open-source community.  
+                Our platform provides tools for you to build strong
+                relationships with your supporters. You also join our network of
+                hosted initiatives and become part of a supportive and growing
+                open-source community.
               </p>
             </div>
           </div>
@@ -713,11 +721,15 @@
               </div>
               <div class="answerWrapper" js-data="faqAnswer">
                 <p>
-                  The Open Collective Foundation’s mission is to provide a simple,
-                  open, lightweight path for charitable initiatives and communities
-                  to operate through a 501(c)(3) entity. 
-                  <a href="https://docs.opencollective.foundation/about/mission-and-values"
-                     target="_blank"> Read more about our impact areas here.</a>
+                  The Open Collective Foundation’s mission is to provide a
+                  simple, open, lightweight path for charitable initiatives and
+                  communities to operate through a 501(c)(3) entity.
+                  <a
+                    href="https://docs.opencollective.foundation/about/mission-and-values"
+                    target="_blank"
+                  >
+                    Read more about our impact areas here.</a
+                  >
                 </p>
               </div>
             </div>
@@ -789,11 +801,18 @@
               </div>
               <div class="answerWrapper" js-data="faqAnswer">
                 <p>
-                  Fiscal sponsorship, often referred to as fiscal hosting within the Open Collective context,
-                  is when an organization holds funds on behalf of smaller projects (which we call initiatives)
-                  and often also provides administrative services such as financial oversight and management.
-                    <a href="https://docs.opencollective.foundation/about/fiscal-sponsorship-info-guide" target="_blank"
-                       > Read more about fiscal hosting and fiscal sponsorship here.</a>
+                  Fiscal sponsorship, often referred to as fiscal hosting within
+                  the Open Collective context, is when an organization holds
+                  funds on behalf of smaller projects (which we call
+                  initiatives) and often also provides administrative services
+                  such as financial oversight and management.
+                  <a
+                    href="https://docs.opencollective.foundation/about/fiscal-sponsorship-info-guide"
+                    target="_blank"
+                  >
+                    Read more about fiscal hosting and fiscal sponsorship
+                    here.</a
+                  >
                 </p>
               </div>
             </div>
@@ -801,10 +820,7 @@
           <div class="faq">
             <div class="questionWrapper">
               <div class="faqQuestionHeaderWrapper" js-toggle="question">
-                <span class="question"
-                  >Who needs a fiscal
-                  host?</span
-                >
+                <span class="question">Who needs a fiscal host?</span>
                 <button js-toggle="icon" class="plusIcon">
                   <svg
                     width="16px"
@@ -867,14 +883,20 @@
                 </button>
               </div>
               <div class="answerWrapper" js-data="faqAnswer">
-                <p>  
-                Fiscal hosting is a great option for many different kinds of collaborative groups and communities. Some are ongoing projects
-                  that want to raise funds over a long-term period, newly-formed
-                  grassroots groups that want to quickly accept tax-deductible donations
-                  (without going through onerous IRS processes), and initiatives that want
-                  to organize their fundraising efforts, spending, and expenses in a transparent way.
-                  <a href="https://docs.opencollective.foundation/about/what-we-offer" target="_blank"
-                    >Read more about what we offer!</a>
+                <p>
+                  Fiscal hosting is a great option for many different kinds of
+                  collaborative groups and communities. Some are ongoing
+                  projects that want to raise funds over a long-term period,
+                  newly-formed grassroots groups that want to quickly accept
+                  tax-deductible donations (without going through onerous IRS
+                  processes), and initiatives that want to organize their
+                  fundraising efforts, spending, and expenses in a transparent
+                  way.
+                  <a
+                    href="https://docs.opencollective.foundation/about/what-we-offer"
+                    target="_blank"
+                    >Read more about what we offer!</a
+                  >
                 </p>
               </div>
             </div>
@@ -946,13 +968,17 @@
               </div>
               <div class="answerWrapper" js-data="faqAnswer">
                 <p>
-                  Once you have joined Open Collective Foundation, you can immediately
-                  begin receiving tax-deductible donations and spending funds on your expenses.
-                  You have a dashboard to manage your initiative, and our platform takes care of
-                  donation receipts, generates invoices, and takes care of your overhead.
-                  You have complete, 24/7 access to manage your funds on our platform.
-                  <a href="https://docs.opencollective.foundation/how-it-works/basics"
-                    >See more about the basics here.</a>
+                  Once you have joined Open Collective Foundation, you can
+                  immediately begin receiving tax-deductible donations and
+                  spending funds on your expenses. You have a dashboard to
+                  manage your initiative, and our platform takes care of
+                  donation receipts, generates invoices, and takes care of your
+                  overhead. You have complete, 24/7 access to manage your funds
+                  on our platform.
+                  <a
+                    href="https://docs.opencollective.foundation/how-it-works/basics"
+                    >See more about the basics here.</a
+                  >
                 </p>
               </div>
             </div>
@@ -1026,12 +1052,17 @@
               </div>
               <div class="answerWrapper" js-data="faqAnswer">
                 <p>
-                 When you hear that an organization is a “501(c)(3)” in the US,
-                  that means they have been approved by the IRS as a tax-exempt, charitable organization.
-                  Initiatives hosted by OCF, through our 501(c)(3) status, can receive grants and tax-deductible
-                  donations that are usually only available to established nonprofits.
-                    <a href="https://docs.opencollective.foundation/about/fiscal-hosting#what-does-501-c-3-mean" target="_blank"
-                      >Read our in-depth discussion of all these terms here.</a>
+                  When you hear that an organization is a “501(c)(3)” in the US,
+                  that means they have been approved by the IRS as a tax-exempt,
+                  charitable organization. Initiatives hosted by OCF, through
+                  our 501(c)(3) status, can receive grants and tax-deductible
+                  donations that are usually only available to established
+                  nonprofits.
+                  <a
+                    href="https://docs.opencollective.foundation/about/fiscal-hosting#what-does-501-c-3-mean"
+                    target="_blank"
+                    >Read our in-depth discussion of all these terms here.</a
+                  >
                 </p>
               </div>
             </div>
@@ -1039,7 +1070,9 @@
           <div class="faq">
             <div class="questionWrapper">
               <div class="faqQuestionHeaderWrapper" js-toggle="question">
-                <span class="question">How do you compare to other options?</span>
+                <span class="question"
+                  >How do you compare to other options?</span
+                >
                 <button js-toggle="icon" class="plusIcon">
                   <svg
                     width="16px"
@@ -1103,8 +1136,13 @@
               </div>
               <div class="answerWrapper" js-data="faqAnswer">
                 <p>
-                  Open Collective Foundation annd the Open Collective platform offer unique features that you won't find anywhere else.
-                  <a href="https://docs.opencollective.foundation/about/what-we-offer#how-were-different" target="_blank">Read all about how we're different.</a>
+                  Open Collective Foundation annd the Open Collective platform
+                  offer unique features that you won't find anywhere else.
+                  <a
+                    href="https://docs.opencollective.foundation/about/what-we-offer#how-were-different"
+                    target="_blank"
+                    >Read all about how we're different.</a
+                  >
                 </p>
               </div>
             </div>
@@ -1114,9 +1152,9 @@
           <div class="doYouStillHaveQuestionTextWrapper">
             <h3>Do you still have questions?</h3>
             <p>
-              Read more about us and what do in our Documentation +
-              FAQs, or if you would like us contact you, send us an email, and
-              we'll be in touch with you as soon as possible.
+              Read more about us and what do in our Documentation + FAQs, or if
+              you would like us contact you, send us an email, and we'll be in
+              touch with you as soon as possible.
             </p>
           </div>
           <div class="actionWrapper">
