fix: correct few typos and add hyperlink for users to email

--- a/index.html
+++ b/index.html
@@ -449,7 +449,10 @@
                 overhead is reduced.
               </p>
               <p class="boldParagrah">
-                Reach out to us! We will set up a call and help you get started
+                <a href="mailto: contact@opencollective.foundation"
+                  >Reach out to us!</a
+                >
+                We will set up a call and help you get started
               </p>
             </div>
           </div>
@@ -1153,8 +1156,8 @@
             <h3>Do you still have questions?</h3>
             <p>
               Read more about us and what do in our Documentation + FAQs, or if
-              you would like us contact you, send us an email, and we'll be in
-              touch with you as soon as possible.
+              you would like us to contact you, send us an email, and we'll be
+              in touch with you as soon as possible.
             </p>
           </div>
           <div class="actionWrapper">
