fix: correct few typos and add hyperlink for users to email

--- a/index.html
+++ b/index.html
@@ -449,9 +449,9 @@
                 overhead is reduced.
               </p>
               <p class="boldParagrah">
-                <a href="mailto: contact@opencollective.foundation"
-                  >Reach out to us!</a
-                >
+                <button class="linkButton" js-event="contactUs">
+                  Reach out to us!
+                </button>
                 We will set up a call and help you get started
               </p>
             </div>
@@ -1429,8 +1429,8 @@
             Join Open Collective today with your COVID-relief mutual aid group.
             <a href="http://www.docs.opencollective.foundation">Learn more</a>
             or
-            <a href="mailto:contact@opencollective.foundation">contact us</a> to
-            start collecting tax-deductible donations asap.
+            <button class="linkButton" js-event="contactUs">contact us</button>
+            to start collecting tax-deductible donations asap.
           </p>
         </div>
         <div class="bannerIllustration rightLadyIllustration">
