fix: change dead link in homepage

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 *Third-party payment processors (like Stripe and Paypal) charge
                 separate fees on each transaction made using their service.
                 <a
-                  href="https://docs.opencollective.foundation/faqs/untitled#how-much-does-it-cost"
+                  href="https://docs.opencollective.foundation/how-it-works/fees"
                   class="learnMoreHere"
                   >Learn more here</a
                 >.
