--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Manager</title>
-    <link href=/admin/config.yml" type="text/yaml" rel="cms-config-url">
+    <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url" />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
 
