Add comments to explain Netlify CMS build

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
+    <!-- This is built with webpack as part of this build -->
     <script src="/assets/scripts/main.js"></script>
     <script src="./ejsEditorComponent.js"></script>
   </body>
