Put it in an iframe

--- a/src/compensation-frame/index.html
+++ b/src/compensation-frame/index.html
@@ -16,6 +16,7 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/quasar@2.10.0/dist/quasar.umd.prod.js"></script>
+    <script src="https://www.unpkg.com/iframe-resizer@4.3.2/js/iframeResizer.contentWindow.min.js"></script>
 
     <div id="app">
       <label> Classification </label>
